# aurum

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  genesis-example.json
account/: Cargo.toml
account/src/: account.rs  account_storage.rs  lib.rs
account/tests/: account_test.rs
balance/: Cargo.toml
balance/src/: balance.rs  balance_storage.rs  lib.rs
balance/tests/: balance_storage_test.rs
block/: Cargo.toml
block/src/: block.rs  block_storage.rs  lib.rs
block/tests/: block_storage_test.rs  block_test.rs
common/: Cargo.toml
common/src/: bigdecimal.rs  biginteger.rs
common/tests/: num_test.rs
crypto/: Cargo.toml
crypto/src/: crypto.rs
db/: Cargo.toml
db/src/: lib.rs
node/: Cargo.toml
node/src/: address.rs  behaviour.rs  cli.rs  client.rs  config.rs  lib.rs  logger.rs  main.rs  node.rs  p2p.rs
node/tests/: block_test.rs
operation/: Cargo.toml
operation/src/: tx.rs
operation/tests/: tx_test.rs
p2p/: Cargo.toml
p2p/src/: address.rs  behaviour.rs  client.rs  lib.rs  network.rs
p2p/tests/: network_test.rs
rpc/: Cargo.toml
rpc/src/: client.rs  lib.rs  schema.rs  server.rs
stake/: Cargo.toml
stake/src/: lib.rs  stake.rs  stake_storage.rs
stake/tests/: stake_storage_test.rs
state/: Cargo.toml
state/src/: lib.rs  mem_pool.rs  state.rs
state/tests/: mem_pool_test.rs  state_test.rs
storage/: Cargo.toml
storage/src/: storage.rs
storage/tests/: storage_test.rs
tx/: Cargo.toml
tx/src/: lib.rs  nonce_storage.rs  tx.rs  tx_data.rs  tx_storage.rs
tx/tests/: nonce_storage_test.rs  tx_storage_test.rs  tx_test.rs
wallet/: Cargo.toml
wallet-cli/: Cargo.toml
wallet-cli/src/: behaviour.rs  cli.rs  client.rs  lib.rs  main.rs
wallet/src/: wallet.rs
wallet/tests/: wallet_test.rs
