[package]
name = "account"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
rocksdb = { workspace = true }

[dev-dependencies]
wallet = { path = "../wallet" }
tempfile = { workspace = true }
db = { path = "../db" }