[package]
name = "xchg"
version.workspace = true
edition.workspace = true

[dependencies]
block = { path = "../block" }
common = { path = "../common" }
rpc = { path = "../rpc" }
p2p = { path = "../p2p" }
tx = { path = "../tx" }
serde_json = { workspace = true }
rpassword = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
state = { path = "../state" }
storage = { path = "../storage" }
wallet = { path = "../wallet" }
log = { workspace = true }
flexi_logger = { workspace = true }
serde = { workspace = true }
libp2p = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }