[package]
name = "state"
version.workspace = true
edition.workspace = true

[dependencies]
block = { path = "../block" }
stake = { path = "../stake" }
operation = { path = "../operation" }
balance = { path = "../balance" }
tx = { path = "../tx" }
wallet = { path = "../wallet" }
log = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
common = { path = "../common" }
tokio = { workspace = true }