[package]
name = "state"
version.workspace = true
edition.workspace = true

[dependencies]
block = { path = "../block" }
stake = { path = "../stake" }
operation = { path = "../operation" }
balance = { path = "../balance" }
tx = { path = "../tx" }
wallet = { path = "../wallet" }
common = { path = "../common" }
log = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }