[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
account = { path = "../account" }
operation = { path = "../operation" }
bs58 = { workspace = true }
block = { path = "../block" }
db = { path = "../db" }
log = { workspace = true }
tx = { path = "../tx" }
common = { path = "../common" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wallet = { path = "../wallet" }
