[package]
name = "tx"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
wallet = { path = "../wallet" }
crypto = { path = "../crypto" }
common = { path = "../common" }
rocksdb = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
db = { path = "../db" }